--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3"
   }
 }
